--- a/SchoolNetwork.csproj
+++ b/SchoolNetwork.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200422112855_SchoolNetworkTest.cs" />
+    <Compile Remove="Migrations\20200422112855_SchoolNetworkTest.Designer.cs" />
+    <Compile Remove="Migrations\20200422113201_SchoolNetworkTest.cs" />
+    <Compile Remove="Migrations\20200422113201_SchoolNetworkTest.Designer.cs" />
+    <Compile Remove="Migrations\20200422113538_SchoolNetworkTest.cs" />
+    <Compile Remove="Migrations\20200422113538_SchoolNetworkTest.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
